<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lib_connect"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    tools:ignore="HardcodedText">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="32dp"
        android:text="Create An Account"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/userNameEditText"
        android:layout_width="@dimen/signUp_width"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="16dp"
        android:background="@drawable/my_edit_text"
        android:drawableStart="@drawable/id_card"
        android:hint="@string/full_name"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailEditText"
        android:layout_width="@dimen/signUp_width"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="16dp"
        android:background="@drawable/my_edit_text"
        android:drawableStart="@drawable/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordEditText"
        android:layout_width="@dimen/signUp_width"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="0dp"
        android:background="@drawable/my_edit_text"
        android:drawableStart="@drawable/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/passInfoButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="start"
        android:background="@drawable/question_mark" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:backgroundTint="@color/blue"
        android:text="@string/register" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/completeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:visibility="invisible" />
</androidx.appcompat.widget.LinearLayoutCompat>
